PATCH: Minor fix to align cards in debate
Materialize adds by default margin in its cards. Therefore, the top margin from post comment was removed.

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -274,6 +274,7 @@ a.card {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: flex-start;
 }
 
 .comment-list {
@@ -458,6 +459,10 @@ a.card {
 .card-title-margins {
     margin: 5%;
     padding: 5% 0;
+}
+
+.no-top-margin {
+    margin-top: 0;
 }
 
 .badge-margin {
